# RMtask_smz

./: .gitignore
任务 6_PNP/: CMakeLists.txt  README.md  cameraparam.yml  main.cpp
任务 8_Learning/: LeNet5.pth  train.py
任务1_Armor/: CMakeLists.txt  README.md  main.cpp
任务1_Armor_装甲板2/: CMakeLists.txt  README.md  main.cpp
任务2_Rune/: README.md  main.cpp
任务4/: main  main.cpp
任务5_serial/: CMakeLists.txt  serial.cpp
任务7_ROS/ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
任务7_ROS/ros_ws/devel/lib/pkgconfig/: launch.pc  pub_sub_test.pc
任务7_ROS/ros_ws/devel/lib/pub_sub_test/: publisher  subscriber
任务7_ROS/ros_ws/devel/share/launch/cmake/: launchConfig.cmake
任务7_ROS/ros_ws/devel/share/pub_sub_test/cmake/: pub_sub_testConfig.cmake
任务7_ROS/ros_ws/src/launch/: package.xml  run.launch
任务7_ROS/ros_ws/src/pub_sub_test/: CMakeLists.txt  package.xml  publisher.cpp  subscriber.cpp
